--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
                 <!--Primer requests-->
                 <div class="request">
                     <div class="first-subcontainer">
-                        <p class="name">Some User</p>
+                        <p class="name">Neil M</p>
                         <p class="num" id="num1">0</p>
                         <p class="likes">likes(s)</p>
                         <button onclick="like1()" class="like">Like</button>
                     </div>
                     <div class="second-subcontainer">
-                        <p class="description">This is some filler text, it can say anything we like</p>
+                        <p class="description">I just set up this new discord bot, let me know what you all think. link</p>
                     </div>
                 </div>
                 <!--Segundo requests-->
                 <div class="request">
                     <div class="first-subcontainer">
-                        <p class="name">Some User</p>
+                        <p class="name">Nichole K</p>
                         <p class="num" id="num2">0</p>
                         <p class="likes">likes(s)</p>
                         <button onclick="like2()" class="like">Like</button>
                     </div>
                     <div class="second-subcontainer">
-                        <p class="description">This is some filler text, it can say anything we like</p>
+                        <p class="description">Just finished my next comic, check it out.</p>
                     </div>
                 </div>
                 <!--Tercer requests-->
                 <div class="request">
                     <div class="first-subcontainer">
-                        <p class="name">Some User</p>
+                        <p class="name">Jim R</p>
                         <p class="num" id="num3">0</p>
                         <p class="likes">likes(s)</p>
                         <button onclick="like3()" class="like">Like</button>
                     </div>
                     <div class="second-subcontainer">
-                        <p class="description">This is some filler text, it can say anything we like</p>
+                        <p class="description">I can't stop listening to the new album. Who else is liking it?</p>
                     </div>
                 </div>
             </div>
